--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-VITE_CLERK_PUBLISHABLE_KEY="----- Clerk Publishable Key -----"
-VITE_BACKEND_URL = 'http://localhost:5000'
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_Y2FzdWFsLWJ1bm55LTgzLmNsZXJrLmFjY291bnRzLmRldiQ
+VITE_BACKEND_URL = 'https://lms-full-stack-server-nine.vercel.app'
 VITE_CURRENCY = '$'
